--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
               <div class="block-16">
                 <figure>
                   <img src="images/img_1.jpg" alt="Image placeholder" class="img-fluid rounded">
-                  <a href="https://vimeo.com/channels/staffpicks/93951774" class="play-button popup-vimeo"><span class="icon-play"></span></a>
+                  <a href="https://www.youtube.com/watch?v=UFTHaDcK5Qk" class="play-button popup-vimeo"><span class="icon-play"></span></a>
                 </figure>
               </div>
 
