--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                   <li class="has-children">
                     <a href="#">Episodios</a>
                     <ul class="dropdown arrow-top">
-                      <li><a href="00.html">Episodio piloto</a></li>
-                      <li><a href="#">Proximamente</a></li>
+                      <li><a href="00.html">Arturo el Loco</a></li>
+                      <li><a href="#">24 de mayo 2022</a></li>
                       <li><a href="#">Proximamente</a></li>
                     </ul>
                   </li>
@@ -95,15 +95,11 @@
         <div class="row align-items-center justify-content-center text-center">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h2 class="text-white font-weight-light mb-2 display-4">Episode 00: El día que llovió plomo</h2>
-            <div class="text-white mb-4"><span class="text-white-opacity-05"><small>Por Jairo David Méndez | Proximamente -- Mayo 2022 | 5:00 minutos</small></span></div>
-            <p><a href="00.html" class="btn btn-primary btn-sm py-3 px-4 small">Lee el guion</a></p>
+            <h2 class="text-white font-weight-light mb-2 display-4">Episode 00: Arturo el Loco</h2>
+            <div class="text-white mb-4"><span class="text-white-opacity-05"><small>Por Jairo David Méndez | Proximamente 24 Mayo 2022 | 9:17 minutos</small></span></div>
+            <p><a href="00.html" class="btn btn-primary btn-sm py-3 px-4 small"></a></p>
 
-            <div class="player">
-              <audio id="player2" preload="none" controls style="max-width: 100%">
-                <source src="http://www.largesound.com/ashborytour/sound/AshboryBYU.mp3" type="audio/mp3">
-              </audio>
-            </div>
+           <iframe src="https://www.ivoox.com/player_ej_87564141_6_1.html?c1=b98427" width="100%" height="200" frameborder="0" allowfullscreen="" scrolling="no" loading="lazy"></iframe>
 
           </div>
         </div>
